--- a/Themes/island.conf
+++ b/Themes/island.conf
@@ -32,7 +32,7 @@ BackgroundPlaceholder=""
 # Background displayed before the actual background is loaded.
 # Use only if the background is a video, otherwise leave blank.
 # Connected with: Background.
-Backgrounds="Backgrounds/island/${HOUR}.webp"
+Backgrounds="Backgrounds/island/${HOUR}.jpg"
 # Must be a relative path of folder containing backgrounds for each hours.
 # naming should be 0.{ext}, 1.{ext}, ..., 23.{ext}
 # Supports: png, jpg, jpeg, webp, gif
