--- a/Themes/island.conf
+++ b/Themes/island.conf
@@ -102,7 +102,7 @@ HoverVirtualKeyboardButtonTextColor="#b7cef1"
 
 #################### Form ####################
 
-PartialBlur="true"
+PartialBlur="false"
 # Default false.
 FullBlur=""
 # Default false.
